@@ -5,6 +5,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Allow triggers to be deleted
 - phoromatic: Rely on caching for determining pre-existing cached test profiles from the web UI
 - phoromatic: Add result RSS support
+- phoromatic: Add new option to results page
 
 Phoronix Test Suite 5.6 Milestone 2
 4 February 2015
